[package]
name = "pixles-api-service"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
pixles-api-entity = { path = "../entity" }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
