[package]
name = "pixles-api-service"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
pixles-api-entity = { path = "../entity" }
pixles-core = { path = "../../pixles-core-rust" }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
nanoid = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
thiserror = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
