[package]
name = "pixles-api-service"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
pixles-api-entity = { path = "../entity" }
pixles-api-model = { path = "../model" }
pixles-core = { path = "../../pixles-core-rust" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
nanoid = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
thiserror = { workspace = true }

[features]
default = []
auth = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
