[package]
name = "pixles-api-testing"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "testing"
path = "src/lib.rs"

[dependencies]
pixles-api-entity = { path = "../entity" }
pixles-api-migration = { path = "../migration" }
tokio = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
uuid.workspace = true
dotenvy = "0.15.7"
thiserror = { workspace = true }
