[package]
name = "pixles-api-upload"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "upload"
path = "src/lib.rs"

[dependencies]
pixles-api-docs = { path = "../docs" }
# pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment", features = ["upload"] }
axum = { workspace = true, features = ["multipart"] }
eyre = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true }
# jsonwebtoken = "9.3.0"
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
# chrono = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
# secrecy = { workspace = true }
# nanoid = { workspace = true }
sled = "0.34.7"                 # TODO: Remove this later
aide = { workspace = true }
schemars = { workspace = true }
indexmap.workspace = true
