[package]
name = "pixles-api-upload"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "upload"
path = "src/lib.rs"

[dependencies]
pixles-api-auth = { path = "../auth" }
pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment", features = ["upload"] }
pixles-api-model = { path = "../model" }
pixles-api-service = { path = "../service" }
pixles-core = { path = "../../pixles-core-rust" }
pixles-media = { path = "../../pixles-media" }
bb8-redis = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
nanoid = { workspace = true }
indexmap = { workspace = true }
bytes = { workspace = true }
jsonwebtoken = { workspace = true }
libc = "0.2.180"
