[package]
name = "pixles-cli-entity"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "debug-print",
] }
