[package]
name = "pixles-cli-migration"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
sea-orm-migration = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
